--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,78 @@
+APScheduler==3.6.3
+astroid==2.4.2
+attrs==20.3.0
+azure-cognitiveservices-vision-face==0.4.1
+azure-common==1.1.26
+backcall==0.2.0
+Brotli==1.0.9
 certifi==2020.12.5
+cffi==1.14.4
 chardet==4.0.0
 click==7.1.2
+colorama==0.4.4
+cryptography==3.3.1
+cycler==0.10.0
+dash==1.18.1
+dash-bootstrap-components==0.11.1
+dash-core-components==1.14.1
+dash-html-components==1.1.1
+dash-renderer==1.8.3
+dash-table==4.11.1
+decorator==4.4.2
 Flask==1.1.2
+Flask-Compress==1.8.0
 Flask-Cors==3.0.10
+future==0.18.2
 gunicorn==20.0.4
 idna==2.10
+ipykernel==5.4.2
+ipython==7.19.0
+ipython-genutils==0.2.0
+isodate==0.6.0
+isort==5.7.0
 itsdangerous==1.1.0
+jedi==0.18.0
 Jinja2==2.11.2
+jsonschema==3.2.0
+jupyter-client==6.1.7
+jupyter-core==4.7.0
+kiwisolver==1.3.1
+lazy-object-proxy==1.4.3
+lxml==4.6.2
 MarkupSafe==1.1.1
+matplotlib==3.3.3
+mccabe==0.6.1
+msrest==0.6.19
+nbformat==5.0.8
 numpy==1.19.5
+oauthlib==3.1.0
 opencv-python==4.5.1.48
-pkg-resources==0.0.0
+pandas==1.2.0
+pandas-datareader==0.9.0
+parso==0.8.1
+pickleshare==0.7.5
+Pillow==8.1.0
+plotly==4.14.1
+prompt-toolkit==3.0.9
+pycparser==2.20
+Pygments==2.7.3
+pylint==2.6.0
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+python-telegram-bot==13.1
+pytz==2020.5
+pywin32==300
+pyzmq==20.0.0
 requests==2.25.1
+requests-oauthlib==1.3.0
+retrying==1.3.3
 six==1.15.0
+toml==0.10.2
+tornado==6.1
+traitlets==5.0.5
+tzlocal==2.1
 urllib3==1.26.2
+wcwidth==0.2.5
 Werkzeug==1.0.1
+wrapt==1.12.1
